[gd_scene load_steps=5 format=2]

[ext_resource path="res://Juego/Escenarios/Potenciadores/armas_player/granada_01/granada_01.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]

[sub_resource type="CircleShape2D" id=2]
radius = 68.2029

[node name="granada_01" type="KinematicBody2D"]
collision_mask = 0
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.391928, 0.391928 )
texture = ExtResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[node name="AreaImpaco" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaImpaco"]
shape = SubResource( 2 )
disabled = true

[node name="Timer2" type="Timer" parent="."]
wait_time = 0.5
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="area_entered" from="AreaImpaco" to="." method="_on_AreaImpaco_area_entered"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
